--- a/Chirp/home/templates/layout.html
+++ b/Chirp/home/templates/layout.html
@@ -32,6 +32,7 @@
             <li class="items"><a href="/contact/">Contact</a></li>
             {% if user.is_authenticated %}
             <li class="items"><a href="/chirp/">Post</a></li>
+            <li class="items"><a href="/chat/">Chats</a></li>
             {% endif %}
         </ul>
         <div class="auth">
