--- a/Chirp/home/templates/layout.html
+++ b/Chirp/home/templates/layout.html
@@ -16,23 +16,26 @@
 <link href="https://fonts.googleapis.com/css2?family=Concert+One&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
 
+{% comment %} <script src="https://kit.fontawesome.com/25137dc536.js" crossorigin="anonymous"></script> {% endcomment %}
+
 <link href="{% static 'fontawesomefree/css/fontawesome.css' %}" rel="stylesheet" type="text/css">
 <link href="{% static 'fontawesomefree/css/brands.css' %}" rel="stylesheet" type="text/css">
 <link href="{% static 'fontawesomefree/css/solid.css' %}" rel="stylesheet" type="text/css">
+<link href="{% static 'fontawesomefree/css/regular.css' %}" rel="stylesheet" type="text/css">
 
 {% block staticfiles %}{% endblock %}
 
 </head>
 <body>
-    <header>
+    <nav>
         <div class="logo">Chirp.</div>
         <ul>
-            <li class="active items"><a href="/">Home</a></li>
-            <li class="items"><a href="/about/">About</a></li>
-            <li class="items"><a href="/contact/">Contact</a></li>
+            <li class="active items"><i class="fa-solid fa-house"></i><a href="/">Home</a></li>
+            <li class="items"><i class="fa-regular fa-file-lines"></i><a href="/about/">About</a></li>
+            <li class="items"><i class="fa-solid fa-phone"></i><a href="/contact/">Contact</a></li>
             {% if user.is_authenticated %}
-            <li class="items"><a href="/chirp/">Post</a></li>
-            <li class="items"><a href="/chat/">Chats</a></li>
+            <li class="items"><i class="fa-solid fa-pen"></i><a href="/chirp/">Post</a></li>
+            <li class="items"><i class="fa-solid fa-comment"></i><a href="/chat/">Chats</a></li>
             {% endif %}
         </ul>
         <div class="auth">
@@ -42,21 +45,21 @@
             {% else %}
             <img src="{% static "noProfile.jpg" %}">
             {% endif %}
-            <div class="dropdown">
-                <a href="/logout">Log Out</a>
-            </div>
+            <a href="/logout"><i class="fa-solid fa-arrow-right-from-bracket" style="margin-right:10px"></i>Log Out</a>
             {% else %}
             <a href="/login/">Log In</a>
             <a href="/signup/">Sign Up</a>
             {% endif %}
         </div>
-    </header>
+    </nav>
 
+    <div class="main">
     {% block content %}
         Not Found
     {% endblock %}
+    </div>
 
-    <footer style="background-color: #333; color: #fff; padding: 20px 0; text-align: center;">
+    {% comment %} <footer style="background-color: #333; color: #fff; padding: 20px 0; text-align: center;">
         <div style="max-width: 800px; margin: auto;">
             <div style="margin-bottom: 20px;">
                 <a href="/" style="color: #fff; text-decoration: none; font-size: 20px; font-weight: bold;">Chirp</a>
@@ -76,7 +79,7 @@
                 &copy; 2024 Chirp. All rights reserved.
             </div>
         </div>
-    </footer>
+    </footer> {% endcomment %}
     
 </body>
 <script src="{% static "/js/header.js" %}"></script>
