--- a/Chirp/static/css/contact.css
+++ b/Chirp/static/css/contact.css
@@ -2,14 +2,16 @@
 
 .container {
     width: 70vw;
-    height: 90vh;
+    /* height: 90vh; */
     margin: auto;
     margin-top: 10vh;
     font-family: "Rubik", sans-serif;
     line-height: 2em;
-    /* padding-bottom: 10vh; */
+    padding-bottom: 10vh;
     display: flex;
     flex-direction: column;
+    /* align-items: center;
+    justify-content: center; */
     gap: 20px;
 }
 
@@ -32,7 +34,7 @@ form {
 .container p {
     line-height: normal;
     /* font-size: small; */
-    color: #3d3d3d;
+    color: #c2c2c2;
     width: 70%;
 }
 
