--- a/Chirp/static/css/layout.css
+++ b/Chirp/static/css/layout.css
@@ -1,7 +1,7 @@
 :root{
-    --tertiary: #eae2b7;
-    --dominant: #d62828;
-    --secondary: #fcbf49;
+    --tertiary: #10002b;
+    --dominant: #e0aaff;
+    --secondary: #240046;
 }
 
 *{
@@ -11,129 +11,106 @@
 
 body {
     width: 100vw;
-    min-height: 100vh;
-    height: auto;
+    height: 100vh;
+    /* height: auto; */
     font-family: "Poppins", sans-serif;
     background: var(--tertiary);
-}
-
-header {
-    width: 100%;
-    height: 8vh;
+    color: white;
     display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
+}
+
+nav {
+    display: flex;
+    flex-direction: column;
+    width: 20vw;
+    height: 100vh;
+    box-sizing: border-box;
+    /* position: fixed; */
+    /* left: 0; */
     background-color: var(--secondary);
-    box-shadow: 5px;
-    border-bottom: 2px solid var(--dominant);
+    align-items: center;
+    justify-content: space-between;
+    padding: 5% 2%;
 }
 
-header img {
-    width: 40px;
-    height: 40px;
-    border-radius: 50px;
-    object-fit: cover;
+nav .logo {
+    font-size: 3em;
+    font-weight: 600;
+    font-family: 'Concert+One';
 }
 
-ul {
-    width: 50%;
-    height: 100%;
+nav ul {
     list-style: none;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    align-items: self-start;
+    justify-content: space-evenly;
+    height: 50%;
+    width: 70%;
+}
+
+nav ul li {
+    /* width: 50%; */
+    text-align: left;
+    padding: 10px 15px;
+    border-radius: 5px;
+    width: fit-content;
+    /* background-color: red; */
+    box-sizing: border-box;
+    transition: all;
+    transition-duration: 300ms;
+    cursor: pointer;
+    background-color: inherit;
+}
+
+nav ul li:hover {
+    background-color: var(--tertiary);
+}
+
+nav ul li a {
+    text-decoration: none;
+    color: inherit;
+    font-weight: 600;
+    font-size: medium;
+    margin: 0 10px;
+}
+
+nav ul .active {
+    color: var(--tertiary);
+}
+
+nav .auth {
+    display: flex;
     align-items: center;
     justify-content: center;
-    gap: 3%;
+    flex-direction: column;
+    gap: 20px;
+    width: 70%;
 }
 
-.active {
-    background-color: var(--dominant);
-    color: var(--secondary);
-    border-radius: 20px;
-    /* box-shadow: 2px 2px 2px var(--tertiary); */
+nav .auth img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50px;
+    align-self: flex-start;
 }
 
-.logo {
-    width: 25%;
-    height: 100%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    font-size: 2.5rem;
-    font-weight: bold;
-    padding-left: 3%;
-    font-family: "Concert One", sans-serif;
-    color: var(--dominant);
-}
-
-header .auth {
-    width: 25%;
-    height: 100%;
-    display: flex;
-    flex-direction: row-reverse;
-    /* justify-content: ; */
-    align-items: center;
-    padding-right: 3%;
-    gap: 3%;
-    position: relative;
-    cursor: pointer;
-}
-
-header .auth a {
-    padding: 5px 12px;
-    background-color: var(--dominant);
-    color: var(--secondary);
-    border-radius: 5px;
-    font-size: medium;
-    font-weight: 600;
+nav .auth a {
     text-decoration: none;
-    border: 2px solid var(--dominant);
-    transition: all 0.3s;
-}
-
-header .auth a:hover {
-    background-color: transparent;
-    color: var(--dominant);
-}
-
-header ul li a {
-    text-decoration: none;
-    font-weight: 600;
     color: inherit;
+    font-weight: 600;
+    font-size: medium;
+    padding: 10px 15px;
+    border-radius: 5px;
+    align-self: flex-start;
+    /* margin: 0 10px; */
 }
 
-header ul li {
-    color: var(--dominant);
-    padding: 5px 10px;
-    cursor: pointer;
-    transition: color;
-    /* transition-duration: 0.5s; */
+nav .auth a:hover {
+    background-color: var(--tertiary);
 }
 
-header ul li:hover {
-    color: var(--secondary);
-    background-color: var(--dominant);
-    border-radius: 20px;
+.main {
+    width: 80vw;
+    overflow-y: scroll;
 }
-
-.dropdown {
-    position: absolute;
-    width: 10vw;
-    height: auto;
-    right: 10;
-    bottom: -6vh;
-    padding: 4px;
-    background-color: var(--secondary);
-    opacity: 0;
-    transition: opacity 0.1s;
-}
-
-.dropdown a {
-    width: 100%;
-    text-align: center;
-    text-decoration: none;
-    font-weight: 500;
-    color: var(--dominant);
-    font-size: medium;  
-}   
