--- a/Chirp/static/css/login.css
+++ b/Chirp/static/css/login.css
@@ -4,7 +4,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
 }
 
